2008-08-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Fix for backward
	  search.

2008-08-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.addin.xml,
	  MonoDevelop.SourceEditor/SourceEditorView.cs,
	  MonoDevelop.SourceEditor/DebugValueTooltipProvider.cs: Added
	  context menu for the editor margin.

2008-08-13  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.BehaviorPanel.cs,
	  MonoDevelop.SourceEditor.OptionPanels/BehaviorPanel.cs,
	  MonoDevelop.SourceEditor/SourceEditorOptions.cs: fixed "Bug 416847
	  - Cannot use Tab Button".

2008-08-12  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Extension,
	  MonoDevelop.SourceEditor.Extension/TemplateCodon.cs,
	  MonoDevelop.SourceEditor.Extension/TemplateExtensionNodeLoader.cs,
	  MonoDevelop.SourceEditor.addin.xml,
	  MonoDevelop.SourceEditor/SourceEditorDisplayBinding.cs: fixed "Bug
	  405926 - Addins cannot add syntax schemes or colour schemes to the
	  text editor".

2008-08-11  Michael Hutchinson <mhutchinson@novell.com> 

	* gtk-gui/gui.stetic,
	  gtk-gui/MonoDevelop.SourceEditor.OptionPanels.BehaviorPanel.cs,
	  gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs,
	  gtk-gui/MonoDevelop.SourceEditor.OptionPanels.HighlightingPanel.cs,
	  gtk-gui/MonoDevelop.SourceEditor.OptionPanels.MarkerPanel.cs,
	  gtk-gui/objects.xml: Tidy up the text editor options panels.
	* MonoDevelop.SourceEditor.OptionPanels/GeneralOptionsPanel.cs,
	  MonoDevelop.SourceEditor.OptionPanels/HighlightingPanel.cs: Removed
	  unnecessary toolbox item attributes.
	* MonoDevelop.SourceEditor.OptionPanels/MarkerPanel.cs,
	  MonoDevelop.SourceEditor/SourceEditorOptions.cs: Fix spelling,
	  sheme -> scheme.

2008-08-11  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.BehaviorPanel.cs,
	  MonoDevelop.SourceEditor.OptionPanels/BehaviorPanel.cs,